

======================================================================
Changes since version 3.3.x

NOTE: Use this section for changes that are NOT included in the 3.3
branch.
======================================================================


General Changes
===============

These entries apply to all relevant language mappings unless otherwise
noted.

- It is now legal to pass an empty name to createObjectAdpaterWithRouter
  and createObjectAdapterWithEndpoints. If so, a UUID will be generated
  as the name.

- Added support for dispatching servant invocations and AMI callbacks
  with application specific threads (with a GUI dedicated thread for
  example). The application needs to implement the Ice::Dispatcher
  interface and initialize the communicator appropiately to use this
  dispatcher implementation. See the Ice manual for more information.

- icegridadmin when using username/password authentication now zeros
  the entire password after use.

- icegridadmin now correctly handles EOF when reading username and
  password.

- The Ice::Connection createProxy method will now create a secure
  proxy if the connection is secure and a datagram proxy if the
  connection is a datagram connection.

- Added Communicator::proxyToProperty which converts a proxy to a
  property set.

- Calling Glacier2::Router::destroySession() no longer raises an
  Ice::ConnectionLostException exception. Glacier2 doesn't forcefully
  close anymore the connection but instead relies on Glacier2
  activation connection management for client connections to close it.

- Glacier2 has been changed to allow enabling active connection
  management. Active connection management is enabled by default for
  Glacier2 client connections and if Glacier2.SessionTimeout is set.
  The ACM timeout is set to twice the value of the session timeout. If
  session timeout is disabled, ACM is also disabled for client
  connections.

- Added support for per-object adapter ACM timeout. This timeout is