@@ -906,7 +906,10 @@ IceInternal::Instance::Instance(const CommunicatorPtr& communicator, const Initi
                 {
                     throw InitializationException(__FILE__, __LINE__, "Both syslog and file logger cannot be enabled.");
                 }
-                _initData.logger = new SysLoggerI(_initData.properties->getProperty("Ice.ProgramName"));
+
+                _initData.logger = 
+                    new SysLoggerI(_initData.properties->getProperty("Ice.ProgramName"), 
+                                   _initData.properties->getPropertyWithDefault("Ice.SyslogFacility", "LOG_USER"));
             }
             else
 #endif
