@@ -8,7 +8,7 @@
 // **********************************************************************
 
 //
-// Generated by makeprops.py from file ../config/PropertyNames.xml, Fri Oct 16 11:27:10 2009
+// Generated by makeprops.py from file ../config/PropertyNames.xml, Fri Dec  4 10:31:05 2009
 
 // IMPORTANT: Do not edit this file -- any edits made here will be lost!
 
@@ -98,6 +98,7 @@ const IceInternal::Property IcePropsData[] =
     IceInternal::Property("Ice.ServerIdleTime", false, 0),
     IceInternal::Property("Ice.StdErr", false, 0),
     IceInternal::Property("Ice.StdOut", false, 0),
+    IceInternal::Property("Ice.SyslogFacility", false, 0),
     IceInternal::Property("Ice.ThreadPool.Client.Size", false, 0),
     IceInternal::Property("Ice.ThreadPool.Client.SizeMax", false, 0),
     IceInternal::Property("Ice.ThreadPool.Client.SizeWarn", false, 0),
