@@ -8,7 +8,7 @@
 // **********************************************************************
 
 //
-// Generated by makeprops.py from file ../config/PropertyNames.xml, Fri Oct 16 11:27:10 2009
+// Generated by makeprops.py from file ../config/PropertyNames.xml, Fri Dec  4 10:31:05 2009
 
 // IMPORTANT: Do not edit this file -- any edits made here will be lost!
 
@@ -100,6 +100,7 @@ namespace IceInternal
              new Property(@"^Ice\.ServerIdleTime$", false, null),
              new Property(@"^Ice\.StdErr$", false, null),
              new Property(@"^Ice\.StdOut$", false, null),
+             new Property(@"^Ice\.SyslogFacility$", false, null),
              new Property(@"^Ice\.ThreadPool\.Client\.Size$", false, null),
              new Property(@"^Ice\.ThreadPool\.Client\.SizeMax$", false, null),
              new Property(@"^Ice\.ThreadPool\.Client\.SizeWarn$", false, null),
